tests/NormalTests/paczka1/fuzzy1/42754089.err
Error in line 2: p2hI4YS3 S876 71,2
Error in line 6: d9pqyDEap A23 7,5
Error in line 13: S742 A23 74,2
Error in line 20: zSyJG AG3 15G,G
Error in line 28: d9pqyDEap A753 22,6
Error in line 22: Ko2YFz S876 92,0
Error in line 19: zSyJG A23 45,3
Error in line 25: p2hI4YS3 S742 63,8
